test/scc/expr/semantic-errors/030.t
void test()
{
    struct A {int x;} a;
    struct B {int y;} b;
    (struct A)b;
}